Bid Placed Success dlg labels issue fixed, Changed global p element word-break attribute

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -17,5 +17,5 @@ code {
 }
 
 p {
-    word-break: break-all;
+    word-break: break-word;
 }
